test/error/ConstructorAbstract.ci
public class Test
{
	public abstract Test() { //ERROR: Abstract methods allowed only in an abstract class
	}
}
